# healthmetrics

./: README.md  pyproject.toml
.github/workflows/: docs.yml  quarto-publish.yml  test.yml
docs/: README.md  _quarto.yml  ard.qmd  index.qmd  metric_define.qmd  metric_evaluator.qmd  metric_pivot.qmd
tests/: data_fixtures.py  test_ard.py  test_enum_labels.py  test_enum_preservation_and_ordering.py  test_integration_quickstart.py  test_metric_define.py  test_metric_evaluator.py  test_metric_helpers.py  test_metric_registry.py  test_pivot_by_methods.py  test_quickstart_examples.py  test_subgroup_sorting.py  test_utils_parsing.py
