[project]
name = "demo-eval-metric"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.2",
    "polars>=1.32.3",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.12.11",
    "pyre-check>=0.9.22",
]
docs = [
    "jupyter>=1.0.0",
    "nbformat>=5.10.0",
    "ipykernel>=6.0.0",
    "ipython>=8.0.0",
    "matplotlib>=3.5.0",
    "pandas>=2.0.0",
    "tabulate>=0.9.0",
    "great-tables>=0.18.0",
    "pyarrow>=21.0.0",
    "quarto-cli>=1.6.40",
]
test = [
    "great-tables>=0.18.0",
    "coverage>=7.0.0",
]

[dependency-groups]
docs = [
    "jupyter>=1.0.0",
    "nbformat>=5.10.0",
    "ipykernel>=6.0.0",
    "ipython>=8.0.0",
    "matplotlib>=3.5.0",
    "pandas>=2.0.0",
    "tabulate>=0.9.0",
    "great-tables>=0.18.0",
    "pyarrow>=21.0.0",
    "quarto-cli>=1.6.40",
]
test = [
    "great-tables>=0.18.0",
    "coverage>=7.0.0",
]
dev = [
    "ruff>=0.12.11",
    "pyre-check>=0.9.22",
]

[tool.uv]
default-groups = ["dev", "docs", "test"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["polars_eval_metrics*"]
